feat: use mux player for video/audio
Signed-off-by: Sora Morimoto <sora@morimoto.io>

--- a/packages/core/upload/package.json
+++ b/packages/core/upload/package.json
@@ -56,6 +56,7 @@
     "watch": "pack-up watch"
   },
   "dependencies": {
+    "@mux/mux-player-react": "3.0.0",
     "@strapi/design-system": "2.0.0-rc.11",
     "@strapi/icons": "2.0.0-rc.11",
     "@strapi/provider-upload-local": "workspace:*",
